--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
 
                 <div class="signin-form">
                     <h2 class="form-title">Sign In</h2>
-                    <form method="post" th:action="@{/login}" class="register-form" id="login-form">
+                    <form method="post" th:action="@{/signin}" class="register-form" id="login-form">
                         <div class="form-group">
                             <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                             <input type="text" name="username" id="your_name" placeholder="UserName"/>
@@ -39,14 +39,6 @@
                             <input type="submit" name="login" id="signin" class="form-submit" value="Login"/>
                         </div>
                     </form>
-                    <div class="social-login">
-                        <span class="social-label">Or login with</span>
-                        <ul class="socials">
-                            <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>
-                            <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>
-                            <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
